// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer/components/notification/NotificationFooter.tsx security alerts should use github icon for avatar Repository Dependabot Alerts Thread 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-wrap items-center gap-1 text-xs capitalize opacity-80"
      >
        <button
          class="flex-shrink-0"
          title="View User Profile"
          type="button"
        >
          <img
            alt="gitify-app's avatar"
            class="rounded-full object-cover size-4"
            src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
          />
        </button>
        <div
          title="You're watching the repository."
        >
          Updated
        </div>
        <div
          title="gitify-app updated 7 years ago"
        >
          7 years ago
        </div>
        <div
          class="flex"
        >
          <button
            class="flex gap-1 items-center m-0.5 rounded-full bg-gray-100 px-1 text-xxs hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700"
            title="octocat approved these changes"
            type="button"
          >
            <svg
              aria-label="octocat approved these changes"
              class="octicon octicon-check text-green-500"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="12"
              overflow="visible"
              role="img"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
              />
            </svg>
            1
          </button>
          <button
            class="flex gap-1 items-center m-0.5 rounded-full bg-gray-100 px-1 text-xxs hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700"
            title="gitify-app requested changes"
            type="button"
          >
            <svg
              aria-label="gitify-app requested changes"
              class="octicon octicon-file-diff text-red-500"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="12"
              overflow="visible"
              role="img"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M1 1.75C1 .784 1.784 0 2.75 0h7.586c.464 0 .909.184 1.237.513l2.914 2.914c.329.328.513.773.513 1.237v9.586A1.75 1.75 0 0 1 13.25 16H2.75A1.75 1.75 0 0 1 1 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h10.5a.25.25 0 0 0 .25-.25V4.664a.25.25 0 0 0-.073-.177l-2.914-2.914a.25.25 0 0 0-.177-.073ZM8 3.25a.75.75 0 0 1 .75.75v1.5h1.5a.75.75 0 0 1 0 1.5h-1.5v1.5a.75.75 0 0 1-1.5 0V7h-1.5a.75.75 0 0 1 0-1.5h1.5V4A.75.75 0 0 1 8 3.25Zm-3 8a.75.75 0 0 1 .75-.75h4.5a.75.75 0 0 1 0 1.5h-4.5a.75.75 0 0 1-.75-.75Z"
              />
            </svg>
            1
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-wrap items-center gap-1 text-xs capitalize opacity-80"
    >
      <button
        class="flex-shrink-0"
        title="View User Profile"
        type="button"
      >
        <img
          alt="gitify-app's avatar"
          class="rounded-full object-cover size-4"
          src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
        />
      </button>
      <div
        title="You're watching the repository."
      >
        Updated
      </div>
      <div
        title="gitify-app updated 7 years ago"
      >
        7 years ago
      </div>
      <div
        class="flex"
      >
        <button
          class="flex gap-1 items-center m-0.5 rounded-full bg-gray-100 px-1 text-xxs hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700"
          title="octocat approved these changes"
          type="button"
        >
          <svg
            aria-label="octocat approved these changes"
            class="octicon octicon-check text-green-500"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="12"
            overflow="visible"
            role="img"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="12"
          >
            <path
              d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
            />
          </svg>
          1
        </button>
        <button
          class="flex gap-1 items-center m-0.5 rounded-full bg-gray-100 px-1 text-xxs hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700"
          title="gitify-app requested changes"
          type="button"
        >
          <svg
            aria-label="gitify-app requested changes"
            class="octicon octicon-file-diff text-red-500"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="12"
            overflow="visible"
            role="img"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="12"
          >
            <path
              d="M1 1.75C1 .784 1.784 0 2.75 0h7.586c.464 0 .909.184 1.237.513l2.914 2.914c.329.328.513.773.513 1.237v9.586A1.75 1.75 0 0 1 13.25 16H2.75A1.75 1.75 0 0 1 1 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h10.5a.25.25 0 0 0 .25-.25V4.664a.25.25 0 0 0-.073-.177l-2.914-2.914a.25.25 0 0 0-.177-.073ZM8 3.25a.75.75 0 0 1 .75.75v1.5h1.5a.75.75 0 0 1 0 1.5h-1.5v1.5a.75.75 0 0 1-1.5 0V7h-1.5a.75.75 0 0 1 0-1.5h1.5V4A.75.75 0 0 1 8 3.25Zm-3 8a.75.75 0 0 1 .75-.75h4.5a.75.75 0 0 1 0 1.5h-4.5a.75.75 0 0 1-.75-.75Z"
            />
          </svg>
          1
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renderer/components/notification/NotificationFooter.tsx security alerts should use github icon for avatar Repository Vulnerability Alert 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-wrap items-center gap-1 text-xs capitalize opacity-80"
      >
        <button
          class="flex-shrink-0"
          title="View User Profile"
          type="button"
        >
          <img
            alt="gitify-app's avatar"
            class="rounded-full object-cover size-4"
            src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
          />
        </button>
        <div
          title="You're watching the repository."
        >
          Updated
        </div>
        <div
          title="gitify-app updated 7 years ago"
        >
          7 years ago
        </div>
        <div
          class="flex"
        >
          <button
            class="flex gap-1 items-center m-0.5 rounded-full bg-gray-100 px-1 text-xxs hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700"
            title="octocat approved these changes"
            type="button"
          >
            <svg
              aria-label="octocat approved these changes"
              class="octicon octicon-check text-green-500"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="12"
              overflow="visible"
              role="img"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
              />
            </svg>
            1
          </button>
          <button
            class="flex gap-1 items-center m-0.5 rounded-full bg-gray-100 px-1 text-xxs hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700"
            title="gitify-app requested changes"
            type="button"
          >
            <svg
              aria-label="gitify-app requested changes"
              class="octicon octicon-file-diff text-red-500"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="12"
              overflow="visible"
              role="img"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M1 1.75C1 .784 1.784 0 2.75 0h7.586c.464 0 .909.184 1.237.513l2.914 2.914c.329.328.513.773.513 1.237v9.586A1.75 1.75 0 0 1 13.25 16H2.75A1.75 1.75 0 0 1 1 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h10.5a.25.25 0 0 0 .25-.25V4.664a.25.25 0 0 0-.073-.177l-2.914-2.914a.25.25 0 0 0-.177-.073ZM8 3.25a.75.75 0 0 1 .75.75v1.5h1.5a.75.75 0 0 1 0 1.5h-1.5v1.5a.75.75 0 0 1-1.5 0V7h-1.5a.75.75 0 0 1 0-1.5h1.5V4A.75.75 0 0 1 8 3.25Zm-3 8a.75.75 0 0 1 .75-.75h4.5a.75.75 0 0 1 0 1.5h-4.5a.75.75 0 0 1-.75-.75Z"
              />
            </svg>
            1
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-wrap items-center gap-1 text-xs capitalize opacity-80"
    >
      <button
        class="flex-shrink-0"
        title="View User Profile"
        type="button"
      >
        <img
          alt="gitify-app's avatar"
          class="rounded-full object-cover size-4"
          src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
        />
      </button>
      <div
        title="You're watching the repository."
      >
        Updated
      </div>
      <div
        title="gitify-app updated 7 years ago"
      >
        7 years ago
      </div>
      <div
        class="flex"
      >
        <button
          class="flex gap-1 items-center m-0.5 rounded-full bg-gray-100 px-1 text-xxs hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700"
          title="octocat approved these changes"
          type="button"
        >
          <svg
            aria-label="octocat approved these changes"
            class="octicon octicon-check text-green-500"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="12"
            overflow="visible"
            role="img"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="12"
          >
            <path
              d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
            />
          </svg>
          1
        </button>
        <button
          class="flex gap-1 items-center m-0.5 rounded-full bg-gray-100 px-1 text-xxs hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700"
          title="gitify-app requested changes"
          type="button"
        >
          <svg
            aria-label="gitify-app requested changes"
            class="octicon octicon-file-diff text-red-500"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="12"
            overflow="visible"
            role="img"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="12"
          >
            <path
              d="M1 1.75C1 .784 1.784 0 2.75 0h7.586c.464 0 .909.184 1.237.513l2.914 2.914c.329.328.513.773.513 1.237v9.586A1.75 1.75 0 0 1 13.25 16H2.75A1.75 1.75 0 0 1 1 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h10.5a.25.25 0 0 0 .25-.25V4.664a.25.25 0 0 0-.073-.177l-2.914-2.914a.25.25 0 0 0-.177-.073ZM8 3.25a.75.75 0 0 1 .75.75v1.5h1.5a.75.75 0 0 1 0 1.5h-1.5v1.5a.75.75 0 0 1-1.5 0V7h-1.5a.75.75 0 0 1 0-1.5h1.5V4A.75.75 0 0 1 8 3.25Zm-3 8a.75.75 0 0 1 .75-.75h4.5a.75.75 0 0 1 0 1.5h-4.5a.75.75 0 0 1-.75-.75Z"
            />
          </svg>
          1
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renderer/components/notification/NotificationFooter.tsx should default to known avatar if no user found 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-wrap items-center gap-1 text-xs capitalize opacity-80"
      >
        <div>
          <svg
            aria-hidden="true"
            class="octicon octicon-mark-github"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z"
            />
          </svg>
        </div>
        <div
          title="You're watching the repository."
        >
          Updated
        </div>
        <div
          title="Updated 7 years ago"
        >
          7 years ago
        </div>
        <div
          class="flex"
        >
          <button
            class="flex gap-1 items-center m-0.5 rounded-full bg-gray-100 px-1 text-xxs hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700"
            title="octocat approved these changes"
            type="button"
          >
            <svg
              aria-label="octocat approved these changes"
              class="octicon octicon-check text-green-500"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="12"
              overflow="visible"
              role="img"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
              />
            </svg>
            1
          </button>
          <button
            class="flex gap-1 items-center m-0.5 rounded-full bg-gray-100 px-1 text-xxs hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700"
            title="gitify-app requested changes"
            type="button"
          >
            <svg
              aria-label="gitify-app requested changes"
              class="octicon octicon-file-diff text-red-500"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="12"
              overflow="visible"
              role="img"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M1 1.75C1 .784 1.784 0 2.75 0h7.586c.464 0 .909.184 1.237.513l2.914 2.914c.329.328.513.773.513 1.237v9.586A1.75 1.75 0 0 1 13.25 16H2.75A1.75 1.75 0 0 1 1 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h10.5a.25.25 0 0 0 .25-.25V4.664a.25.25 0 0 0-.073-.177l-2.914-2.914a.25.25 0 0 0-.177-.073ZM8 3.25a.75.75 0 0 1 .75.75v1.5h1.5a.75.75 0 0 1 0 1.5h-1.5v1.5a.75.75 0 0 1-1.5 0V7h-1.5a.75.75 0 0 1 0-1.5h1.5V4A.75.75 0 0 1 8 3.25Zm-3 8a.75.75 0 0 1 .75-.75h4.5a.75.75 0 0 1 0 1.5h-4.5a.75.75 0 0 1-.75-.75Z"
              />
            </svg>
            1
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-wrap items-center gap-1 text-xs capitalize opacity-80"
    >
      <div>
        <svg
          aria-hidden="true"
          class="octicon octicon-mark-github"
          display="inline-block"
          fill="currentColor"
          focusable="false"
          height="16"
          overflow="visible"
          style="vertical-align: text-bottom;"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z"
          />
        </svg>
      </div>
      <div
        title="You're watching the repository."
      >
        Updated
      </div>
      <div
        title="Updated 7 years ago"
      >
        7 years ago
      </div>
      <div
        class="flex"
      >
        <button
          class="flex gap-1 items-center m-0.5 rounded-full bg-gray-100 px-1 text-xxs hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700"
          title="octocat approved these changes"
          type="button"
        >
          <svg
            aria-label="octocat approved these changes"
            class="octicon octicon-check text-green-500"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="12"
            overflow="visible"
            role="img"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="12"
          >
            <path
              d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
            />
          </svg>
          1
        </button>
        <button
          class="flex gap-1 items-center m-0.5 rounded-full bg-gray-100 px-1 text-xxs hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700"
          title="gitify-app requested changes"
          type="button"
        >
          <svg
            aria-label="gitify-app requested changes"
            class="octicon octicon-file-diff text-red-500"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="12"
            overflow="visible"
            role="img"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="12"
          >
            <path
              d="M1 1.75C1 .784 1.784 0 2.75 0h7.586c.464 0 .909.184 1.237.513l2.914 2.914c.329.328.513.773.513 1.237v9.586A1.75 1.75 0 0 1 13.25 16H2.75A1.75 1.75 0 0 1 1 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h10.5a.25.25 0 0 0 .25-.25V4.664a.25.25 0 0 0-.073-.177l-2.914-2.914a.25.25 0 0 0-.177-.073ZM8 3.25a.75.75 0 0 1 .75.75v1.5h1.5a.75.75 0 0 1 0 1.5h-1.5v1.5a.75.75 0 0 1-1.5 0V7h-1.5a.75.75 0 0 1 0-1.5h1.5V4A.75.75 0 0 1 8 3.25Zm-3 8a.75.75 0 0 1 .75-.75h4.5a.75.75 0 0 1 0 1.5h-4.5a.75.75 0 0 1-.75-.75Z"
            />
          </svg>
          1
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renderer/components/notification/NotificationFooter.tsx should render itself & its children 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-wrap items-center gap-1 text-xs capitalize opacity-80"
      >
        <button
          class="flex-shrink-0"
          title="View User Profile"
          type="button"
        >
          <img
            alt="gitify-app's avatar"
            class="rounded-full object-cover size-4"
            src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
          />
        </button>
        <div
          title="You're watching the repository."
        >
          Updated
        </div>
        <div
          title="gitify-app updated 7 years ago"
        >
          7 years ago
        </div>
        <div
          class="flex"
        >
          <button
            class="flex gap-1 items-center m-0.5 rounded-full bg-gray-100 px-1 text-xxs hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700"
            title="octocat approved these changes"
            type="button"
          >
            <svg
              aria-label="octocat approved these changes"
              class="octicon octicon-check text-green-500"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="12"
              overflow="visible"
              role="img"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
              />
            </svg>
            1
          </button>
          <button
            class="flex gap-1 items-center m-0.5 rounded-full bg-gray-100 px-1 text-xxs hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700"
            title="gitify-app requested changes"
            type="button"
          >
            <svg
              aria-label="gitify-app requested changes"
              class="octicon octicon-file-diff text-red-500"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="12"
              overflow="visible"
              role="img"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M1 1.75C1 .784 1.784 0 2.75 0h7.586c.464 0 .909.184 1.237.513l2.914 2.914c.329.328.513.773.513 1.237v9.586A1.75 1.75 0 0 1 13.25 16H2.75A1.75 1.75 0 0 1 1 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h10.5a.25.25 0 0 0 .25-.25V4.664a.25.25 0 0 0-.073-.177l-2.914-2.914a.25.25 0 0 0-.177-.073ZM8 3.25a.75.75 0 0 1 .75.75v1.5h1.5a.75.75 0 0 1 0 1.5h-1.5v1.5a.75.75 0 0 1-1.5 0V7h-1.5a.75.75 0 0 1 0-1.5h1.5V4A.75.75 0 0 1 8 3.25Zm-3 8a.75.75 0 0 1 .75-.75h4.5a.75.75 0 0 1 0 1.5h-4.5a.75.75 0 0 1-.75-.75Z"
              />
            </svg>
            1
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-wrap items-center gap-1 text-xs capitalize opacity-80"
    >
      <button
        class="flex-shrink-0"
        title="View User Profile"
        type="button"
      >
        <img
          alt="gitify-app's avatar"
          class="rounded-full object-cover size-4"
          src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
        />
      </button>
      <div
        title="You're watching the repository."
      >
        Updated
      </div>
      <div
        title="gitify-app updated 7 years ago"
      >
        7 years ago
      </div>
      <div
        class="flex"
      >
        <button
          class="flex gap-1 items-center m-0.5 rounded-full bg-gray-100 px-1 text-xxs hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700"
          title="octocat approved these changes"
          type="button"
        >
          <svg
            aria-label="octocat approved these changes"
            class="octicon octicon-check text-green-500"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="12"
            overflow="visible"
            role="img"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="12"
          >
            <path
              d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
            />
          </svg>
          1
        </button>
        <button
          class="flex gap-1 items-center m-0.5 rounded-full bg-gray-100 px-1 text-xxs hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700"
          title="gitify-app requested changes"
          type="button"
        >
          <svg
            aria-label="gitify-app requested changes"
            class="octicon octicon-file-diff text-red-500"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="12"
            overflow="visible"
            role="img"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="12"
          >
            <path
              d="M1 1.75C1 .784 1.784 0 2.75 0h7.586c.464 0 .909.184 1.237.513l2.914 2.914c.329.328.513.773.513 1.237v9.586A1.75 1.75 0 0 1 13.25 16H2.75A1.75 1.75 0 0 1 1 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h10.5a.25.25 0 0 0 .25-.25V4.664a.25.25 0 0 0-.073-.177l-2.914-2.914a.25.25 0 0 0-.177-.073ZM8 3.25a.75.75 0 0 1 .75.75v1.5h1.5a.75.75 0 0 1 0 1.5h-1.5v1.5a.75.75 0 0 1-1.5 0V7h-1.5a.75.75 0 0 1 0-1.5h1.5V4A.75.75 0 0 1 8 3.25Zm-3 8a.75.75 0 0 1 .75-.75h4.5a.75.75 0 0 1 0 1.5h-4.5a.75.75 0 0 1-.75-.75Z"
            />
          </svg>
          1
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renderer/components/notification/NotificationFooter.tsx should render itself & its children when last_read_at is null 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-wrap items-center gap-1 text-xs capitalize opacity-80"
      >
        <button
          class="flex-shrink-0"
          title="View User Profile"
          type="button"
        >
          <img
            alt="gitify-app's avatar"
            class="rounded-full object-cover size-4"
            src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
          />
        </button>
        <div
          title="You're watching the repository."
        >
          Updated
        </div>
        <div
          title="gitify-app updated 7 years ago"
        >
          7 years ago
        </div>
        <div
          class="flex"
        >
          <button
            class="flex gap-1 items-center m-0.5 rounded-full bg-gray-100 px-1 text-xxs hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700"
            title="octocat approved these changes"
            type="button"
          >
            <svg
              aria-label="octocat approved these changes"
              class="octicon octicon-check text-green-500"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="12"
              overflow="visible"
              role="img"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
              />
            </svg>
            1
          </button>
          <button
            class="flex gap-1 items-center m-0.5 rounded-full bg-gray-100 px-1 text-xxs hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700"
            title="gitify-app requested changes"
            type="button"
          >
            <svg
              aria-label="gitify-app requested changes"
              class="octicon octicon-file-diff text-red-500"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="12"
              overflow="visible"
              role="img"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M1 1.75C1 .784 1.784 0 2.75 0h7.586c.464 0 .909.184 1.237.513l2.914 2.914c.329.328.513.773.513 1.237v9.586A1.75 1.75 0 0 1 13.25 16H2.75A1.75 1.75 0 0 1 1 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h10.5a.25.25 0 0 0 .25-.25V4.664a.25.25 0 0 0-.073-.177l-2.914-2.914a.25.25 0 0 0-.177-.073ZM8 3.25a.75.75 0 0 1 .75.75v1.5h1.5a.75.75 0 0 1 0 1.5h-1.5v1.5a.75.75 0 0 1-1.5 0V7h-1.5a.75.75 0 0 1 0-1.5h1.5V4A.75.75 0 0 1 8 3.25Zm-3 8a.75.75 0 0 1 .75-.75h4.5a.75.75 0 0 1 0 1.5h-4.5a.75.75 0 0 1-.75-.75Z"
              />
            </svg>
            1
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-wrap items-center gap-1 text-xs capitalize opacity-80"
    >
      <button
        class="flex-shrink-0"
        title="View User Profile"
        type="button"
      >
        <img
          alt="gitify-app's avatar"
          class="rounded-full object-cover size-4"
          src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
        />
      </button>
      <div
        title="You're watching the repository."
      >
        Updated
      </div>
      <div
        title="gitify-app updated 7 years ago"
      >
        7 years ago
      </div>
      <div
        class="flex"
      >
        <button
          class="flex gap-1 items-center m-0.5 rounded-full bg-gray-100 px-1 text-xxs hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700"
          title="octocat approved these changes"
          type="button"
        >
          <svg
            aria-label="octocat approved these changes"
            class="octicon octicon-check text-green-500"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="12"
            overflow="visible"
            role="img"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="12"
          >
            <path
              d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
            />
          </svg>
          1
        </button>
        <button
          class="flex gap-1 items-center m-0.5 rounded-full bg-gray-100 px-1 text-xxs hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700"
          title="gitify-app requested changes"
          type="button"
        >
          <svg
            aria-label="gitify-app requested changes"
            class="octicon octicon-file-diff text-red-500"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="12"
            overflow="visible"
            role="img"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="12"
          >
            <path
              d="M1 1.75C1 .784 1.784 0 2.75 0h7.586c.464 0 .909.184 1.237.513l2.914 2.914c.329.328.513.773.513 1.237v9.586A1.75 1.75 0 0 1 13.25 16H2.75A1.75 1.75 0 0 1 1 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h10.5a.25.25 0 0 0 .25-.25V4.664a.25.25 0 0 0-.073-.177l-2.914-2.914a.25.25 0 0 0-.177-.073ZM8 3.25a.75.75 0 0 1 .75.75v1.5h1.5a.75.75 0 0 1 0 1.5h-1.5v1.5a.75.75 0 0 1-1.5 0V7h-1.5a.75.75 0 0 1 0-1.5h1.5V4A.75.75 0 0 1 8 3.25Zm-3 8a.75.75 0 0 1 .75-.75h4.5a.75.75 0 0 1 0 1.5h-4.5a.75.75 0 0 1-.75-.75Z"
            />
          </svg>
          1
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
